wave1 bug on mobile, changed size

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -14,7 +14,7 @@ nav {
     flex-wrap: wrap;
     background-color: #2e2e2e81;
     width: 100%;
-    height: 70px;
+    height: 50px;
     z-index: 1;
 
 }
@@ -50,7 +50,7 @@ nav {
     height: 100vh;
     background: linear-gradient(180deg, #424242 0%, rgba(17, 17, 17, 1) 55%);
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 300px;
     grid-template-areas:
         "."
         "photo"
